Fixing form validation for predefined user list.

--- a/ui/src/app/components/new-user-modal/new-user-modal.component.html
+++ b/ui/src/app/components/new-user-modal/new-user-modal.component.html
@@ -5,17 +5,17 @@
     <div class="modal-content">
       <div class="modal-body">
         <form #userForm="ngForm" (ngSubmit)="onSubmit()">
-          <div class="form-group" [class.has-danger]="!(namev.valid || namev.pristine)">
+          <div class="form-group">
             <div class="input-group">
               <input id="new-user-input" type="text" class="form-control"
                 required maxlength="100" pattern="[a-zA-Z0-9_-]+"
                 [(ngModel)]="name" name="name" placeholder="Enter your name...."
-                #namev="ngModel" autofocus="">
+                #namev="ngModel" autofocus="" [class.is-invalid]="!(namev.valid || namev.pristine)">
               <span class="input-group-btn">
                   <button type="submit" class="btn btn-primary btn-block" [disabled]="!userForm.form.valid">Okay</button>
               </span>
             </div>
-            <div [hidden]="namev.valid || namev.pristine" class="form-control-feedback">Name must be < 100 characters and contain no spaces.
+            <div [hidden]="namev.valid || namev.pristine" class="text-danger">Name must be < 100 characters and contain no spaces.
             </div>
           </div>
         </form>
