--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -3,4 +3,5 @@
 @import './app/styles/bootstrap';
 @import './app/styles/extras.scss';
 @import '../node_modules/font-awesome/css/font-awesome.min.css';
+@import '../node_modules/angular2-toaster/toaster.css';
 @import '../node_modules/ngx-bootstrap/datepicker/bs-datepicker.css';
