--- a/ui/src/app/components/chat/chat.component.html
+++ b/ui/src/app/components/chat/chat.component.html
@@ -19,7 +19,7 @@
       <div class="row">
         <div class="col-lg-12 input-group">
           <input type="text" [disabled]="poll.readOnly" class="form-control" [(ngModel)]="comment" placeholder="Enter a comment here..." name="comment">
-          <span class="input-group-btn">
+          <span class="input-group-append">
             <button class="btn btn-outline-secondary" type="submit" (click)="createComment()"><i class="fa fa-fw fa-arrow-circle-right"></i></button>
           </span>
         </div>
