--- a/ui/src/app/components/new-user-modal/new-user-modal.component.html
+++ b/ui/src/app/components/new-user-modal/new-user-modal.component.html
@@ -11,7 +11,7 @@
                 required maxlength="100" pattern="[a-zA-Z0-9_-]+"
                 [(ngModel)]="name" name="name" placeholder="Enter your name...."
                 #namev="ngModel" autofocus="" [class.is-invalid]="!(namev.valid || namev.pristine)">
-              <span class="input-group-btn">
+              <span class="input-group-append">
                   <button type="submit" class="btn btn-primary btn-block" [disabled]="!userForm.form.valid">Okay</button>
               </span>
             </div>
