--- a/ui/src/app/components/chat/chat.component.html
+++ b/ui/src/app/components/chat/chat.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-body">
     <h5 class="card-title">Chat</h5>
-    <div *ngIf="poll.comments?.length">
+    <div *ngIf="poll.comments?.length" class="table-container" #scrollMe>
       <hr>
       <table class="table-hover table table-sm">
         <tr *ngFor="let comment of poll.comments">
