--- a/ui/src/app/components/poll/poll.component.html
+++ b/ui/src/app/components/poll/poll.component.html
@@ -73,7 +73,7 @@
             <label class="col-md-2 col-form-label">Title</label>
             <div class="col-md-10">
               <input type="text" class="form-control" [(ngModel)]="poll.title" name="poll_title" placeholder="Enter your poll name..."
-                autofocus>
+                autofocus maxlength="255">
             </div>
           </div>
           <div class="form-check">
