--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
         <a class="nav-link active" [routerLink]="['/']">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://github.com/dessalines/simple-vote" target="_blank">About</a>
+        <a class="nav-link" href="https://github.com/dessalines/simple-vote" target="_blank" placement="bottom" [tooltip]="version">About</a>
       </li>
       <li class="nav-item">
         <button role="button" class="btn btn-outline-primary mx-2"
